kubernetes/nodeport-sg.yml
apiVersion: v1
kind: Service
metadata:
  name: shivamgarg-nodeport
spec:
  type: NodePort 
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: shivamgarg
